# aidt-hw-mod-1

./: README.md  manage.py  pyproject.toml
.junie/: guidelines.md
.plans/: plan.md
config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/todos/: confirm_delete.html  form.html  home.html
todos/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
todos/migrations/: 0001_initial.py
