[project]
name = "aidt-hw-mod-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.8",
]

[project.optional-dependencies]
# Development-only tools
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.9.0",
    "ruff>=0.6.9",
    "isort>=5.13.2",
]
postgres = [
    "psycopg2-binary>=2.9.9",
]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
]
ignore = []
